style.css
:root {
    --color-background: #e6e8d2;
    --color-content: #efefef;
    --color-dark: #2f2f2f;
    --color-link: #5488cc;
    --color-hover: #4ba837;
    --width: 1000px;
    --body-margin: 8px;
    --menu-toggle-width: 80px;
    --menu-toggle-height: 24px;
}

a:link {
    color: var(--color-link);
}

a:visited {
    color: var(--color-link);
}

a:hover {
    color: var(--color-hover);
}

.icon {
    float: right;
    margin-left: 4px;
    fill: var(--color-dark);
}

.icon:hover {
    fill: var(--color-hover);
}

body {
    background-color: var(--color-background);
    color: var(--color-dark);
    font-family: sans-serif;
    margin: var(--body-margin);
    font-size: 12pt;
}

#wrapper {
    max-width: var(--width);
    margin-left: auto;
    margin-right: auto;
}

#header {
    text-align: right;
}

#content {
    display: flex;
    justify-content: center;
}

#index {
    padding: 12px;
    white-space: nowrap;
    font-style: italic;
}

#index ul {
    list-style-type: none;
    text-align: right;
    margin: 0;
}

#blog {
    flex-grow: 1;
}

#post {
    background-color: var(--color-content);
    padding: 12px;
    display: inline-block;
    border: 1px solid var(--color-dark);
}

#post h2 {
    margin: 0;
    text-align: center;
    width: 100%;
}

#post h3 {
    text-align: center;
    width: 100%;
    font-size: 8pt;
    margin-top: 0;
    font-style: italic;
    font-weight: normal;
}

#post figure {
    float: right;
    clear: right;
}

#post img {
    max-width: 100%;
}

#post video {
    max-width: 100%;
}

#footer {
    padding: var(--body-margin);
    margin-bottom: 32px;
}

#footer .next {
    float: right;
}

.dropdown-checkbox {
    display: none;
}

.dropdown-menu {
    display: none;
}

.dropdown-checkbox:checked ~ .dropdown-menu {
    display: block;
}

.dropdown-checkbox:checked ~ .dropdown-toggle #menu-toggle span:before {
    content: "Index ▲";
}

#menu-toggle {
    position: fixed;
    right: 0;
    width: var(--menu-toggle-width);
    height: var(--menu-toggle-height);
    margin: var(--body-margin);
    background-color: var(--color-content);
    border: 1px solid var(--color-dark);
    flex-direction: column;
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
}

#menu-toggle:hover {
    cursor: pointer;
}

#menu-toggle span:before {
    content: "Index ▼";
}

@media (max-width: 1000px) {
    body {
        margin: 0;
    }

    #post h2 {
        margin-top: 24px;
    }

    #index {
        position: fixed;
        right: 0;
        top: calc(var(--menu-toggle-height) - 1px);
        margin: var(--body-margin);
        background-color: var(--color-content);
        border: 1px solid var(--color-dark);
        max-height: 80%;
        overflow: auto;
    }

    #post {
        border-left: none;
        border-right: none;
        border-top: none;
        border-bottom: 1px solid var(--color-dark);
    }
}

@media (min-width: 1001px) {
    #index {
        display: block;
    }

    #menu-toggle {
        display: none;
    }
}

